# frankenstein

./: README.md  graph_styling.cys  pyproject.toml  report.md  setup.sh  tests.ipynb
dataset/: answerable-full.jsonl  answerable-partial.jsonl  unanswerable-missing.jsonl  unanswerable-partial.jsonl
dataset/answerable/: AverageProperty.jsonl  CountryPropertyComparison.jsonl  CountryThresholdCount.jsonl  FactorIncreaseComparison.jsonl  IncreasePropertyComparison.jsonl  PropertyOfSubject.jsonl  RegionComparison.jsonl  RegionComparisonResult.jsonl  TopNTotal.jsonl  TotalProperty.jsonl
dataset/answerable_full/: AverageChange.jsonl  AverageProperty.jsonl  AveragePropertyComparison.jsonl  (+15 more)
eval/: analysis.ipynb  analysis.py  batch.jsonl  batch.sh  batch_0.sh  batch_1.sh  batch_2.sh  batch_3.sh  batch_4.sh  evaluate.py  generate.py  graph.ipynb  log.jsonl  matcher.py  openai_model.py  prompts.py  results.ipynb  runner.py  transformer_model.py  vllm_model.py
frankenstein/: action.py  exceptions.py  fill_templates.py  frankenstein_question.py  graph.ipynb  graph.py  model.py  runner.py  slot_values.py  utils.py
franklin/: Untitled.ipynb  action.py  exceptions.py  fill_templates.py  franklin_question.py  model.py  schema.py  slot_values.py  tools.py  utils.py
graphs/: batch_graph_report.py  graph.py  report.py
resources/: country_region_data.ipynb  get_wdi_data.py  indicator_paraphrases.json  indicator_paraphrases_gpt-4.1-mini.json  indicator_paraphrases_gpt-4.1.json  iso_3166.csv  paraphrase_indicator_name.ipynb  paraphrase_indicators.py  un_m49_cleaned.csv  wdi.csv
(+488 files in other folders)
