[project]
name = "frankenstein"
version = "0.1.0"
description = "Frank-Inspired Evaluation of LLMs on multi-hop QA over tabular data"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Nick Ferguson", email = "nick.ferguson@ed.ac.uk"},
]
dependencies = [
    "beautifulsoup4",
    "ipykernel",
    "litellm>=1.69.3",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "openai",
    "pandas",
    "rich",
    "vllm>=0.9.1",
    "vllm ; sys_platform == 'linux'",
]

[tool.setuptools.packages.find]
include = ["frankenstein*"]


